[gd_scene load_steps=38 format=3 uid="uid://dekg7nrbw3kbt"]

[ext_resource type="Texture2D" uid="uid://dfspedwjqaut2" path="res://assets/sprites/background.jpg" id="1_81rff"]
[ext_resource type="Theme" uid="uid://dy3caveppfer4" path="res://assets/themes/startButton.tres" id="2_81rff"]
[ext_resource type="Script" uid="uid://dxttxglm5t2nq" path="res://scripts/desktop/tabs.gd" id="2_q2hki"]
[ext_resource type="Texture2D" uid="uid://o7kkb1u8mn67" path="res://assets/sprites/starlightLogo.png" id="3_dcrhm"]
[ext_resource type="Texture2D" uid="uid://dx2wwml5yp6fg" path="res://assets/sprites/timeBG.png" id="4_gl26t"]
[ext_resource type="FontFile" uid="uid://b602wbdxpq13j" path="res://assets/fonts/retro-pixel-arcade.ttf" id="5_gl26t"]
[ext_resource type="Script" uid="uid://c02rxu0ch24oj" path="res://scripts/desktop/settingBox.gd" id="5_iamu6"]
[ext_resource type="Script" uid="uid://df88glk2jnvjt" path="res://scripts/desktop/startMenu.gd" id="5_nd1jb"]
[ext_resource type="LabelSettings" uid="uid://cpt0d0nx2sye1" path="res://assets/fonts/emailLabel.tres" id="6_1dbpt"]
[ext_resource type="Texture2D" uid="uid://d0udavkyhxjp0" path="res://assets/sprites/starMailIcon.png" id="6_gl26t"]
[ext_resource type="Theme" uid="uid://w3m4dxgji7wd" path="res://assets/themes/slider.tres" id="6_v4dq8"]
[ext_resource type="Script" uid="uid://barml4itm6ho5" path="res://scripts/desktop/time.gd" id="6_vcvwy"]
[ext_resource type="Texture2D" uid="uid://m4lcs17xiri7" path="res://assets/sprites/unmuted.png" id="7_1dbpt"]
[ext_resource type="LabelSettings" uid="uid://7mavfiqoggw0" path="res://assets/fonts/spacers.tres" id="7_vcvwy"]
[ext_resource type="Texture2D" uid="uid://bondd7aot77e4" path="res://assets/sprites/cyberDiveIcon.png" id="8_nikxi"]
[ext_resource type="Texture2D" uid="uid://8t5lx8yj7lbc" path="res://assets/sprites/muted.png" id="8_v08ca"]
[ext_resource type="Texture2D" uid="uid://cvbhxdxldm58x" path="res://assets/sprites/dictionaryIcon.png" id="9_q2hki"]
[ext_resource type="Theme" uid="uid://r3ga8l8x0yxw" path="res://assets/themes/appTab.tres" id="10_6r5gw"]
[ext_resource type="Script" uid="uid://hoi5lkmubha5" path="res://scripts/desktop/apps.gd" id="14_0542q"]
[ext_resource type="PackedScene" uid="uid://u61lviw2q2f6" path="res://scenes/desktop/dictionary.tscn" id="14_vxgxr"]
[ext_resource type="PackedScene" uid="uid://cx8k5hjvs7c7p" path="res://scenes/desktop/cyberShop.tscn" id="15_6r5gw"]
[ext_resource type="ButtonGroup" uid="uid://d16xlvxwt0fw0" path="res://buttonGroups/tabButtonGroup.tres" id="15_iamu6"]
[ext_resource type="PackedScene" uid="uid://dgf3gja1rph21" path="res://scenes/desktop/starMail.tscn" id="16_iamu6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wbccy"]
bg_color = Color(0.5921569, 0.6901961, 0.7607843, 1)

[sub_resource type="Theme" id="Theme_veafp"]
Panel/styles/panel = SubResource("StyleBoxFlat_wbccy")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iamu6"]
draw_center = false
border_width_top = 2
border_color = Color(0.7926564, 0.84887123, 0.8884855, 1)

[sub_resource type="Theme" id="Theme_dcrhm"]
Panel/styles/panel = SubResource("StyleBoxFlat_iamu6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0542q"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_color = Color(0.7921569, 0.84705883, 0.8901961, 1)

[sub_resource type="Theme" id="Theme_nd1jb"]
Panel/styles/panel = SubResource("StyleBoxFlat_0542q")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3erbe"]
draw_center = false
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.31473863, 0.40498957, 0.4682632, 1)

[sub_resource type="Theme" id="Theme_vxgxr"]
Panel/styles/panel = SubResource("StyleBoxFlat_3erbe")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v4dq8"]
bg_color = Color(0.3137255, 0.40392157, 0.46666667, 1)

[sub_resource type="Theme" id="Theme_3liqb"]
Panel/styles/panel = SubResource("StyleBoxFlat_v4dq8")

[sub_resource type="LabelSettings" id="LabelSettings_wbccy"]
font = ExtResource("5_gl26t")
font_color = Color(0.5921569, 0.6901961, 0.7607843, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1dbpt"]
texture = ExtResource("4_gl26t")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 2.0
texture_margin_bottom = 2.0

[sub_resource type="Theme" id="Theme_6ajoh"]
Panel/styles/panel = SubResource("StyleBoxTexture_1dbpt")

[sub_resource type="LabelSettings" id="LabelSettings_veafp"]
font = ExtResource("5_gl26t")
font_size = 24
font_color = Color(0.043137256, 0.38431373, 0.67058825, 1)
outline_color = Color(0.17508438, 0.29932195, 0.67671543, 1)

[node name="Desktop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 2560.0
offset_bottom = 1440.0
scale = Vector2(0.74999857, 0.74999857)
texture = ExtResource("1_81rff")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="taskbar" type="Panel" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -88.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_veafp")

[node name="taskbarHighlight" type="Panel" parent="CanvasLayer/taskbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_dcrhm")

[node name="menuBox" type="Panel" parent="CanvasLayer/taskbar"]
visible = false
layout_mode = 0
offset_left = 12.0
offset_top = -147.0
offset_right = 315.0
offset_bottom = 9.0
script = ExtResource("5_nd1jb")

[node name="menuHighlight" type="Panel" parent="CanvasLayer/taskbar/menuBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_nd1jb")

[node name="menuShadow" type="Panel" parent="CanvasLayer/taskbar/menuBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vxgxr")

[node name="softwareBG" type="Panel" parent="CanvasLayer/taskbar/menuBox"]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 300.0
offset_bottom = 33.0
theme = SubResource("Theme_3liqb")

[node name="softwareName" type="Label" parent="CanvasLayer/taskbar/menuBox/softwareBG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -12.0
offset_right = 96.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
text = "Starlight 79"
label_settings = SubResource("LabelSettings_wbccy")

[node name="settingButton" type="Button" parent="CanvasLayer/taskbar/menuBox"]
layout_mode = 0
offset_left = 9.0
offset_top = 38.0
offset_right = 293.0
offset_bottom = 92.0
theme = ExtResource("2_81rff")
toggle_mode = true
text = "Settings"

[node name="quitButton" type="Button" parent="CanvasLayer/taskbar/menuBox"]
layout_mode = 0
offset_left = 9.0
offset_top = 96.0
offset_right = 293.0
offset_bottom = 150.0
theme = ExtResource("2_81rff")
text = "Quit
"

[node name="settingBox" type="Panel" parent="CanvasLayer/taskbar"]
visible = false
layout_mode = 0
offset_left = 315.0
offset_top = -161.0
offset_right = 618.0
offset_bottom = 9.0
script = ExtResource("5_iamu6")

[node name="settingHighlight" type="Panel" parent="CanvasLayer/taskbar/settingBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_nd1jb")

[node name="settingShadow" type="Panel" parent="CanvasLayer/taskbar/settingBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_vxgxr")

[node name="musicVolumeLabel" type="Label" parent="CanvasLayer/taskbar/settingBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -118.0
offset_top = 20.0
offset_right = 74.0
offset_bottom = 44.0
grow_horizontal = 2
text = "Music Volume"
label_settings = ExtResource("6_1dbpt")

[node name="musicVolumeSlider" type="HSlider" parent="CanvasLayer/taskbar/settingBox"]
layout_mode = 1
offset_left = 16.0
offset_top = 46.0
offset_right = 243.0
offset_bottom = 78.0
theme = ExtResource("6_v4dq8")
min_value = -6.0
max_value = 6.0
value = 6.0
scrollable = false

[node name="musicMuteButton" type="TextureButton" parent="CanvasLayer/taskbar/settingBox"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_top = 46.0
offset_right = -16.0
offset_bottom = 78.0
grow_horizontal = 0
toggle_mode = true
texture_normal = ExtResource("7_1dbpt")
texture_pressed = ExtResource("8_v08ca")

[node name="sfxVolumeLabel" type="Label" parent="CanvasLayer/taskbar/settingBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -102.5
offset_top = 92.0
offset_right = 57.5
offset_bottom = 116.0
grow_horizontal = 2
text = "SFX Volume"
label_settings = ExtResource("6_1dbpt")

[node name="sfxVolumeSlider" type="HSlider" parent="CanvasLayer/taskbar/settingBox"]
layout_mode = 0
offset_left = 16.0
offset_top = 118.0
offset_right = 243.0
offset_bottom = 150.0
theme = ExtResource("6_v4dq8")
min_value = -12.0
max_value = 0.0
scrollable = false

[node name="sfxMuteButton" type="TextureButton" parent="CanvasLayer/taskbar/settingBox"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_top = 118.0
offset_right = -16.0
offset_bottom = 150.0
grow_horizontal = 0
toggle_mode = true
texture_normal = ExtResource("7_1dbpt")
texture_pressed = ExtResource("8_v08ca")

[node name="timePanel" type="Panel" parent="CanvasLayer/taskbar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -244.0
offset_top = -25.25
offset_right = -25.0
offset_bottom = 25.25
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_6ajoh")

[node name="clock" type="Label" parent="CanvasLayer/taskbar/timePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "x:xx PM"
label_settings = SubResource("LabelSettings_veafp")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("6_vcvwy")

[node name="apps" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 30.0
offset_top = 30.0
offset_right = 88.0
offset_bottom = 200.0
scale = Vector2(1.5, 1.5)
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("14_0542q")

[node name="starMailApp" type="TextureButton" parent="CanvasLayer/apps"]
layout_mode = 0
offset_right = 58.0
offset_bottom = 38.0
texture_normal = ExtResource("6_gl26t")

[node name="cyberShopApp" type="TextureButton" parent="CanvasLayer/apps"]
layout_mode = 0
offset_left = 6.0
offset_top = 58.0
offset_right = 52.0
offset_bottom = 104.0
size_flags_horizontal = 4
texture_normal = ExtResource("8_nikxi")

[node name="dictionaryApp" type="TextureButton" parent="CanvasLayer/apps"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 124.0
offset_right = 48.0
offset_bottom = 170.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("9_q2hki")

[node name="tabs" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 12.0
offset_top = 1001.0
offset_right = 1250.0
offset_bottom = 1071.0
size_flags_horizontal = 3
script = ExtResource("2_q2hki")

[node name="startButton" type="Button" parent="CanvasLayer/tabs"]
layout_mode = 2
theme = ExtResource("2_81rff")
toggle_mode = true
icon = ExtResource("3_dcrhm")

[node name="spacer" type="Label" parent="CanvasLayer/tabs"]
layout_mode = 2
text = "_"
label_settings = ExtResource("7_vcvwy")

[node name="starMailTab" type="Button" parent="CanvasLayer/tabs"]
visible = false
layout_mode = 2
theme = ExtResource("10_6r5gw")
toggle_mode = true
button_group = ExtResource("15_iamu6")
text = "Star Mail"
icon = ExtResource("6_gl26t")

[node name="cyberShopTab" type="Button" parent="CanvasLayer/tabs"]
visible = false
layout_mode = 2
theme = ExtResource("10_6r5gw")
toggle_mode = true
button_group = ExtResource("15_iamu6")
text = "Cyber Shop"
icon = ExtResource("8_nikxi")

[node name="dictionaryTab" type="Button" parent="CanvasLayer/tabs"]
visible = false
layout_mode = 2
theme = ExtResource("10_6r5gw")
toggle_mode = true
button_group = ExtResource("15_iamu6")
text = "Dictionary"
icon = ExtResource("9_q2hki")

[node name="starMail" parent="." instance=ExtResource("16_iamu6")]
visible = false

[node name="cyberShop" parent="." instance=ExtResource("15_6r5gw")]
visible = false

[node name="dictionary" parent="." instance=ExtResource("14_vxgxr")]
visible = false

[connection signal="toggled" from="CanvasLayer/taskbar/menuBox/settingButton" to="CanvasLayer/taskbar/menuBox" method="_on_setting_button_toggled"]
[connection signal="pressed" from="CanvasLayer/taskbar/menuBox/quitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/taskbar/menuBox/quitButton" to="CanvasLayer/taskbar/menuBox" method="_on_quit_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/taskbar/settingBox/musicVolumeSlider" to="CanvasLayer/taskbar/settingBox" method="_on_music_volume_slider_value_changed"]
[connection signal="toggled" from="CanvasLayer/taskbar/settingBox/musicMuteButton" to="CanvasLayer/taskbar/settingBox" method="_on_music_mute_button_toggled"]
[connection signal="value_changed" from="CanvasLayer/taskbar/settingBox/sfxVolumeSlider" to="CanvasLayer/taskbar/settingBox" method="_on_sfx_volume_slider_value_changed"]
[connection signal="toggled" from="CanvasLayer/taskbar/settingBox/sfxMuteButton" to="CanvasLayer/taskbar/settingBox" method="_on_sfx_mute_button_toggled"]
[connection signal="pressed" from="CanvasLayer/apps/starMailApp" to="CanvasLayer/apps" method="_on_star_mail_app_pressed"]
[connection signal="pressed" from="CanvasLayer/apps/cyberShopApp" to="CanvasLayer/apps" method="_on_cyber_shop_app_pressed"]
[connection signal="pressed" from="CanvasLayer/apps/dictionaryApp" to="CanvasLayer/apps" method="_on_dictionary_app_pressed"]
[connection signal="toggled" from="CanvasLayer/tabs/startButton" to="CanvasLayer/tabs" method="_on_start_button_toggled"]
[connection signal="pressed" from="CanvasLayer/tabs/starMailTab" to="CanvasLayer/tabs" method="_on_star_mail_tab_pressed"]
[connection signal="pressed" from="CanvasLayer/tabs/cyberShopTab" to="CanvasLayer/tabs" method="_on_cyber_shop_tab_pressed"]
[connection signal="pressed" from="CanvasLayer/tabs/dictionaryTab" to="CanvasLayer/tabs" method="_on_dictionary_tab_pressed"]
[connection signal="focus_entered" from="cyberShop" to="cyberShop" method="_on_focus_entered"]
[connection signal="focus_entered" from="dictionary" to="dictionary" method="_on_focus_entered"]
